// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`globalCssToCssModule handles PascalCase class names correctly 1`] = `
".contactHeader {
    display: flex;
    padding: 16px;
    
    &--active {
        background-color: #007acc;
    }
}
    
.userProfile {
    margin-top: 20px;
}
    
.title {
    font-size: 18px;
    font-weight: bold;
}
    
.avatar {
    width: 40px;
    height: 40px;
    border-radius: 50%;
} "
`;

exports[`globalCssToCssModule handles PascalCase class names correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import styles from './ComponentWithPascalCase.module.css'

export const ComponentWithPascalCase = () => {
    return (
        <div className={styles.contactHeader}>
            <div className={styles.title}>Contact Information</div>
            <div className={styles.contactHeaderActive}>Active state</div>
            <div className={styles.userProfile}>User Profile</div>
            <div className={styles.avatar}>Avatar</div>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule handles hyphen-separated class names correctly 1`] = `
".playlistStatsUser {
    display: flex;
    padding: 8px;
    background-color: #f0f0f0;
}

.playlistStatsUserAvatar {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    background-color: #007bff;
}

.componentSectionTitle {
    font-size: 18px;
    font-weight: bold;
    color: #333;
}

.buttonPrimaryLarge {
    padding: 12px 24px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 4px;
} "
`;

exports[`globalCssToCssModule handles hyphen-separated class names correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import styles from './ComponentWithHyphens.module.css'

export const ComponentWithHyphens = () => {
    return (
        <div className={styles.playlistStatsUser}>
            <div className={styles.playlistStatsUserAvatar}></div>
            <p className={styles.componentSectionTitle}>Title</p>
            <span className={styles.buttonPrimaryLarge}>Button</span>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule handles mixed hyphen and underscore notation correctly 1`] = `
".componentSectionTitle {
    font-size: 18px;
    font-weight: bold;
    color: #333;
}

.playlistStatsUserAvatar {
    width: 32px;
    height: 32px;
    border-radius: 50%;
    background-color: #007bff;
}

.buttonPrimaryLarge {
    padding: 12px 24px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 4px;
}

.menuItemContainerActive {
    display: flex;
    align-items: center;
    background-color: #f8f9fa;
    border: 1px solid #dee2e6;
} "
`;

exports[`globalCssToCssModule handles mixed hyphen and underscore notation correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import styles from './ComponentWithMixedNotation.module.css'

export const ComponentWithMixedNotation = () => {
    return (
        <div className={styles.menuItemContainerActive}>
            <h2 className={styles.componentSectionTitle}>Mixed Notation Title</h2>
            <div className={styles.playlistStatsUserAvatar}></div>
            <button className={styles.buttonPrimaryLarge}>Mixed Notation Button</button>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule handles nested selectors with multiple underscores correctly 1`] = `
".selectedListItemSelected {
    background-color: #007bff;
    color: white;
    font-weight: bold;
} "
`;

exports[`globalCssToCssModule handles nested selectors with multiple underscores correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import styles from './ComponentWithNestedSelectors.module.css'

export const ComponentWithNestedSelectors = () => {
    return (
        <div>
            <div className={styles.selectedListItemSelected}>Selected Item</div>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule handles underscore-separated class names correctly 1`] = `
".trackTooltipKeyTagsItem {
    display: flex;
    padding: 8px;
    background-color: #f0f0f0;
}

.componentSectionTitle {
    font-size: 18px;
    font-weight: bold;
    color: #333;
}

.buttonPrimaryLarge {
    padding: 12px 24px;
    background-color: #007bff;
    color: white;
    border: none;
    border-radius: 4px;
} "
`;

exports[`globalCssToCssModule handles underscore-separated class names correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import styles from './ComponentWithUnderscores.module.css'

export const ComponentWithUnderscores = () => {
    return (
        <div className={styles.trackTooltipKeyTagsItem}>
            <p className={styles.componentSectionTitle}>Title</p>
            <span className={styles.buttonPrimaryLarge}>Button</span>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule removes existing CSS import and adds CSS module import 1`] = `
".testClass {
    color: red;
    font-size: 16px;
}

.anotherClass {
    background-color: blue;
    padding: 10px;
}

.nestedClass {
    font-weight: bold;
    margin: 5px;
} "
`;

exports[`globalCssToCssModule removes existing CSS import and adds CSS module import 2`] = `
"// @ts-nocheck
import React from 'react'
import classNames from 'classnames'
import styles from './ComponentWithCssImport.module.css'

export const ComponentWithCssImport = () => {
    return (
        <div className={classNames(styles.testClass, styles.anotherClass)}>
            <p className={styles.nestedClass}>Content with CSS classes</p>
        </div>
    )
}
"
`;

exports[`globalCssToCssModule transforms correctly 1`] = `
"

/* Woah! */
.kek {
    color: red;

    /* nah */
    &--wow {
        color: blue;
    }
}

/* Let's see how you handle global top-level classes! */
:global(.theme-light) .kek {
    color: red;
}

/* .repo-header { */
.repoHeader {
    flex: none;
    padding: 0;
    align-items: stretch;
    border-color: var(--border-color);
    border-style: solid;
}

.logo {
    display: flex;
}
"
`;

exports[`globalCssToCssModule transforms correctly 2`] = `
"// @ts-nocheck
import React from 'react'
import classNames from 'classnames'
import styles from './MyComponent.module.css'

export const MyComponent = () => {
    const isActive = true

    return (
        <div className={classNames(styles.kek, styles.kekWow)}>
            <div
                className={classNames(true ? styles.kek : false, {
                    [styles.kek]: false,
                    [classNames(styles.kek, styles.kekWow)]: isActive,
                })}
            ></div>
            It's a component<p className={styles.logo}>wow</p>
            <div className={styles.repoHeader}>Another one!</div>
        </div>
    )
}
"
`;
